--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "author": "Samu Linden",
   "license": "MIT",
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "nodemon": "^1.19.1"
