--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "mongoose": "^5.5.14"
+    "mongoose": "^5.5.14",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
