--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "apollo-server": "^2.6.3",
     "axios": "^0.19.0",
+    "graphql": "^14.3.1",
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3"
   }
