--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js",
+    "client": "npm start --prefix ../frontend",
+    "dev": "concurrently \"npm run watch\" \"npm run client\"",
     "lint": "eslint .",
     "fetch": "node jobs/fetch-data.js",
     "server": "json-server -p3001 --watch db.json"
