--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "apollo-server": "^2.6.3",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
     "graphql": "^14.3.1",
+    "json-web-token": "^3.0.1",
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3"
   }
