--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "graphql": "^14.3.1",
-    "json-web-token": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3"
   }
