--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "graphql": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.14",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.2.1"
   }
 }
