--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.4.2",
+    "apollo-boost": "^0.4.3",
     "apollo-link": "^1.2.12",
     "apollo-link-context": "^1.0.18",
     "graphql": "^14.3.1",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.6",
+    "react-apollo": "^3.0.0-beta.2",
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "semantic-ui-react": "^0.87.2",
-    "styled-components": "^4.3.1",
-    "styled-normalize": "^8.0.6"
+    "semantic-ui-react": "^0.87.2"
   },
   "scripts": {
     "start": "react-scripts start",
