--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,8 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server.js",
+    "start": "node server.js",
+    "start_local": "cross-env NODE_ENV=production node server.js",
     "watch": "cross-env NODE_ENV=development nodemon server.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "client": "npm start --prefix ../frontend",
