--- a/web/package.json
+++ b/web/package.json
@@ -33,9 +33,12 @@
   },
   "dependencies": {
     "apollo-server": "^2.6.3",
+    "apollo-server-express": "^2.7.0-alpha.3",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
+    "express": "^4.17.1",
     "graphql": "^14.3.1",
+    "install": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3",
