--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "client": "npm start --prefix ../frontend",
     "dev": "concurrently \"npm run watch\" \"npm run client\"",
     "lint": "eslint .",
-    "fetch": "node jobs/fetch-data.js",
+    "fetch": "cross-env NODE_ENV=development node jobs/fetch-data.js",
     "server": "json-server -p3001 --watch db.json"
   },
   "author": "Samu Linden",
