--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
+    "jest": "^24.8.0",
     "json-server": "^0.15.0",
     "nodemon": "^1.19.1"
   },
@@ -43,5 +44,8 @@
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3",
     "nodemailer": "^6.2.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
