--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
+    "graphql-tools": "^4.0.5",
     "jest": "^24.8.0",
     "json-server": "^0.15.0",
     "nodemon": "^1.19.1"
