fetch-team-data done and working

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "fetch_players": "cross-env NODE_ENV=development node jobs/fetch-players.js",
     "fetch_boxscores": "cross-env NODE_ENV=development node jobs/fetch-boxscores.js",
     "fetch_stats": "cross-env NODE_ENV=development node jobs/fetch-stats.js",
+    "fetch_team_stats": "cross-env NODE_ENV=development node jobs/fetch-team-stats.js",
     "mongo": "cross-env NODE_ENV=development node jobs/mongo.js",
     "server": "json-server -p3001 --watch db.json"
   },
