--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
     "apollo-server-express": "^2.7.0-alpha.3",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
+    "date-fns": "^1.30.1",
     "express": "^4.17.1",
     "graphql": "^14.3.1",
     "install": "^0.12.2",
