--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "semantic-ui-react": "^0.87.2",
-    "styled-components": "^4.3.2",
-    "styled-normalize": "^8.0.6"
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
