--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
     "graphql": "^14.3.1",
     "install": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.5.14",
     "mongoose-unique-validator": "^2.0.3",
     "nodemailer": "^6.2.1"
