--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,9 @@
     "apollo-boost": "^0.4.3",
     "apollo-link": "^1.2.12",
     "apollo-link-context": "^1.0.18",
+    "formik": "^1.5.8",
     "graphql": "^14.3.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-apollo": "^3.0.0-beta.2",
     "react-apollo-hooks": "^0.4.5",
@@ -17,7 +18,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "semantic-ui-react": "^0.87.2",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
