--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,7 @@
     "fetch_players": "cross-env NODE_ENV=development node jobs/fetch-players.js",
     "fetch_boxscores": "cross-env NODE_ENV=development node jobs/fetch-boxscores/",
     "fetch_stats": "cross-env NODE_ENV=development node jobs/fetch-stats.js",
-    "fetch_team_stats": "cross-env NODE_ENV=development node jobs/fetch-team-stats.js",
+    "fetch_team_stats": "cross-env NODE_ENV=development node jobs/fetch-team-stats/",
     "mongo": "cross-env NODE_ENV=development node jobs/mongo.js",
     "mailgun": "cross-env NODE_ENV=development node utils/mailgun-send-email.js",
     "server": "json-server -p3001 --watch db.json"
