--- a/web/package.json
+++ b/web/package.json
@@ -33,30 +33,30 @@
   "license": "MIT",
   "devDependencies": {
     "apollo": "^2.18.3",
-    "concurrently": "^4.1.0",
-    "cross-env": "^5.2.0",
-    "dotenv": "^8.0.0",
+    "concurrently": "^4.1.2",
+    "cross-env": "^5.2.1",
+    "dotenv": "^8.1.0",
     "eslint": "^5.16.0",
     "graphql-tools": "^4.0.5",
-    "jest": "^24.8.0",
-    "json-server": "^0.15.0",
-    "nodemon": "^1.19.1"
+    "jest": "^24.9.0",
+    "json-server": "^0.15.1",
+    "nodemon": "^1.19.2"
   },
   "dependencies": {
-    "apollo-server": "^2.6.3",
-    "apollo-server-express": "^2.7.0-alpha.3",
+    "apollo-server": "^2.9.4",
+    "apollo-server-express": "^2.9.4",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "date-fns": "^1.30.1",
     "express": "^4.17.1",
-    "graphql": "^14.3.1",
+    "graphql": "^14.5.8",
     "install": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mailgun-js": "^0.22.0",
-    "mongoose": "^5.5.14",
+    "mongoose": "^5.7.1",
     "mongoose-unique-validator": "^2.0.3",
-    "nodemailer": "^6.2.1"
+    "nodemailer": "^6.3.0"
   },
   "jest": {
     "testEnvironment": "node"
