--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "formik": "^1.5.8",
     "graphql": "^14.3.1",
     "lodash": "^4.17.15",
+    "polished": "^3.4.1",
     "react": "^16.8.6",
     "react-apollo": "^3.0.0-beta.2",
     "react-apollo-hooks": "^0.4.5",
