--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "fetch_boxscores": "cross-env NODE_ENV=development node jobs/fetch-boxscores/",
     "fetch_stats": "cross-env NODE_ENV=development node jobs/fetch-stats.js",
     "fetch_team_stats": "cross-env NODE_ENV=development node jobs/fetch-team-stats/",
+    "fetch_goals": "cross-env NODE_ENV=development node jobs/fetch-goals/",
     "mongo": "cross-env NODE_ENV=development node jobs/mongo.js",
     "mailgun": "cross-env NODE_ENV=development node utils/mailgun-send-email.js",
     "server": "json-server -p3001 --watch db.json"
