--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "^3.0.1",
     "semantic-ui-react": "^0.87.2",
     "styled-components": "^4.3.2",
+    "styled-icons": "^8.6.0",
     "yup": "^0.27.0"
   },
   "scripts": {
