--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-apollo": "^3.0.0-beta.2",
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
+    "react-facebook-pixel": "^0.1.3",
     "react-ga": "^2.6.0",
     "react-media": "^1.9.2",
     "react-remove-scroll": "^2.0.4",
