--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "fetch_stats": "cross-env NODE_ENV=development node jobs/fetch-stats.js",
     "fetch_team_stats": "cross-env NODE_ENV=development node jobs/fetch-team-stats/",
     "fetch_goals": "cross-env NODE_ENV=development node jobs/fetch-goals/",
+    "daily_fetch": "cross-env NODE_ENV=development node jobs/daily-fetch",
     "mongo": "cross-env NODE_ENV=development node jobs/mongo.js",
     "mailgun": "cross-env NODE_ENV=development node utils/mailgun-send-email.js",
     "server": "json-server -p3001 --watch db.json"
@@ -44,10 +45,13 @@
     "nodemon": "^1.19.2"
   },
   "dependencies": {
+    "amqp-connection-manager": "^3.0.0",
+    "amqplib": "^0.5.5",
     "apollo-server": "^2.9.4",
     "apollo-server-express": "^2.9.4",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
+    "cron": "^1.7.2",
     "date-fns": "^1.30.1",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
