Added all fetching script to processes

--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "fetch_team_stats": "cross-env NODE_ENV=development node jobs/fetch-team-stats/",
     "fetch_goals": "cross-env NODE_ENV=development node jobs/fetch-goals/",
     "fetch_player": "cross-env NODE_ENV=development node jobs/fetch-player",
+    "reset_script_states": "cross-env NODE_ENV=development node jobs/reset-script-states",
     "mongo": "cross-env NODE_ENV=development node jobs/mongo.js",
     "mailgun": "cross-env NODE_ENV=development node utils/mailgun-send-email.js",
     "server": "json-server -p3001 --watch db.json"
