--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-remove-scroll": "^2.0.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
+    "reaptcha": "^1.7.0",
     "semantic-ui-react": "^0.87.2",
     "styled-components": "^4.3.2",
     "styled-icons": "^8.6.0",
