--- a/backend/package.json
+++ b/backend/package.json
@@ -53,6 +53,7 @@
     "cross-env": "^5.2.1",
     "dotenv": "^8.1.0",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.5.0",
     "graphql-tools": "^4.0.5",
     "jest": "^24.9.0",
     "json-server": "^0.15.1",
