--- a/backend/package.json
+++ b/backend/package.json
@@ -39,8 +39,10 @@
     "post_tweet_prod": "node jobs/post-tweet",
     "daily_fetch": "cross-env NODE_ENV=development node jobs/daily-fetch",
     "daily_fetch_prod": "node jobs/daily-fetch",
-    "clock_process": "cross-env NODE_ENV=development node clock.js",
-    "worker_process": "cross-env NODE_ENV=development node worker.js",
+    "worker": "cross-env NODE_ENV=development node services/worker.js",
+    "scheduler": "cross-env NODE_ENV=development node services/scheduler/",
+    "create_tweets": "cross-env NODE_ENV=development node jobs/create-tweets.js",
+    "create_tweets_prod": "node jobs/create-tweets.js",
     "mongo": "cross-env NODE_ENV=development node jobs/mongo-scripts.js",
     "mailgun": "cross-env NODE_ENV=development node utils/mailgun-send-email.js",
     "server": "json-server -p3001 --watch db.json"
