--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,7 @@
     "create_tweets": "cross-env NODE_ENV=development node jobs/create-tweets.js",
     "create_tweets_prod": "node jobs/create-tweets.js",
     "fetch_scoring_changes": "cross-env NODE_ENV=development node jobs/fetch-scoring-changes.js",
+    "update_boxscores": "cross-env NODE_ENV=development node jobs/update-boxscores",
     "mongo": "cross-env NODE_ENV=development node jobs/mongo-scripts.js",
     "mailgun": "cross-env NODE_ENV=development node utils/mailgun-send-email.js",
     "server": "json-server -p3001 --watch db.json"
