--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,15 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "no-unused-vars": [
+        "warn",
+        {
+          "varsIgnorePattern": "^_$"
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
