--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "client": "npm start --prefix ../frontend",
     "dev": "concurrently \"npm run watch\" \"npm run client\"",
+    "e2e": "concurrently \"npm run start:test\" \"npm run client\"",
     "lint": "eslint .",
+    "start:test": "cross-env NODE_ENV=test node server.js",
     "fetch_conferences": "cross-env NODE_ENV=development node jobs/fetch-conferences.js",
     "fetch_divisions": "cross-env NODE_ENV=development node jobs/fetch-divisions.js",
     "fetch_teams": "cross-env NODE_ENV=development node jobs/fetch-teams.js",
