--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app",
@@ -56,5 +57,7 @@
     ]
   },
   "proxy": "http://localhost:4000",
-  "devDependencies": {}
+  "devDependencies": {
+    "cypress": "^4.0.2"
+  }
 }
