DB reset script done

--- a/backend/package.json
+++ b/backend/package.json
@@ -50,7 +50,8 @@
     "update_boxscores": "cross-env NODE_ENV=development node jobs/update-boxscores",
     "mongo": "cross-env NODE_ENV=development node jobs/mongo-scripts.js",
     "mailgun": "cross-env NODE_ENV=development node utils/mailgun-send-email.js",
-    "server": "json-server -p3001 --watch db.json"
+    "server": "json-server -p3001 --watch db.json",
+    "db:reset": "cross-env NODE_ENV=test node tests/scripts/reset-db.js"
   },
   "author": "Samu Linden",
   "license": "MIT",
