--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "semantic-ui-react": "^0.87.2",
     "styled-components": "^4.3.2",
     "styled-icons": "^8.6.0",
+    "unfetch": "^4.1.0",
     "yup": "^0.27.0"
   },
   "scripts": {
