--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "start:ci": "cd ../backend && npm run start:ci & npm start",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
