--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,4 @@ jobs:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           RECAPTCHA_SECRET_TEST: ${{ secrets.RECAPTCHA_SECRET_TEST }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          REACT_APP_RECAPTCHA_SITE_KEY_V2_TEST: ${{ secrets.REACT_APP_RECAPTCHA_SITE_KEY_V2_TEST }}
