--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,8 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "start_local": "cross-env NODE_ENV=development node server.js",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "start:local": "cross-env NODE_ENV=development node server.js",
     "watch": "cross-env NODE_ENV=development nodemon server.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "client": "npm start --prefix ../frontend",
@@ -20,6 +20,7 @@
     "e2e": "concurrently \"npm run start:test\" \"npm run client\"",
     "lint": "eslint .",
     "start:test": "cross-env NODE_ENV=test node server.js",
+    "start:ci": "NODE_ENV=test node server.js",
     "fetch_conferences": "cross-env NODE_ENV=development node jobs/fetch-conferences.js",
     "fetch_divisions": "cross-env NODE_ENV=development node jobs/fetch-divisions.js",
     "fetch_teams": "cross-env NODE_ENV=development node jobs/fetch-teams.js",
@@ -82,7 +83,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mailgun-js": "^0.22.0",
-    "mongoose": "^5.7.1",
+    "mongoose": "^5.7.5",
     "mongoose-unique-validator": "^2.0.3",
     "nodemailer": "^6.3.0",
     "querystring": "^0.2.0",
