Updated some packages

--- a/backend/package.json
+++ b/backend/package.json
@@ -52,9 +52,9 @@
     "mongo": "cross-env NODE_ENV=development node jobs/mongo-scripts.js",
     "mailgun": "cross-env NODE_ENV=development node utils/mailgun-send-email.js",
     "server": "json-server -p3001 --watch db.json",
-    "db:reset": "cross-env NODE_ENV=test node tests/scripts/reset-db.js",
-    "db:seed": "cross-env NODE_ENV=test node tests/scripts/seed-db.js",
-    "db:reseed": "cross-env NODE_ENV=test node tests/scripts/reset-db.js && cross-env NODE_ENV=test node tests/scripts/seed-db.js"
+    "db:reset": "cross-env NODE_ENV=test node jobs/db-reseed/reset-db.js",
+    "db:seed": "cross-env NODE_ENV=test node jobs/db-reseed/seed-db.js",
+    "db:reseed": "cross-env NODE_ENV=test node jobs/db-reseed/reset-db.js && cross-env NODE_ENV=test node jobs/db-reseed/seed-db.js"
   },
   "author": "Samu Linden",
   "license": "MIT",
