--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,24 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.4.3",
-    "apollo-link": "^1.2.12",
-    "apollo-link-context": "^1.0.18",
+    "apollo-boost": "^0.4.9",
+    "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
     "formik": "^1.5.8",
-    "graphql": "^14.3.1",
+    "graphql": "^14.6.0",
     "lodash": "^4.17.15",
-    "polished": "^3.4.1",
-    "react": "^16.8.6",
-    "react-apollo": "^3.0.0-beta.2",
+    "polished": "^3.6.5",
+    "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
     "react-apollo-hooks": "^0.4.5",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.13.1",
     "react-facebook-pixel": "^0.1.3",
     "react-ga": "^2.6.0",
     "react-media": "^1.9.2",
-    "react-remove-scroll": "^2.0.4",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.3.0",
-    "reaptcha": "^1.7.0",
+    "react-remove-scroll": "^2.3.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "reaptcha": "^1.7.2",
     "semantic-ui-react": "^0.87.2",
     "styled-components": "^4.3.2",
     "styled-icons": "^8.6.0",
@@ -62,6 +62,6 @@
   "proxy": "http://localhost:4000",
   "devDependencies": {
     "chai-colors": "^1.0.1",
-    "cypress": "^4.4.0"
+    "cypress": "^4.9.0"
   }
 }
