--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,25 +7,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: npm install
-        working-directory: backend
-      - name: Cypress run
-        uses: cypress-io/github-action@v1
-        with:
-          working-directory: frontend
-          config-file: cypress.json
-          start: npm run start:ci
-          wait-on: http://localhost:3000
-        env:
-          TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          RECAPTCHA_SECRET_TEST: ${{ secrets.RECAPTCHA_SECRET_TEST }}
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          REACT_APP_RECAPTCHA_SITE_KEY_V2_TEST: ${{ secrets.REACT_APP_RECAPTCHA_SITE_KEY_V2_TEST }}
+      # - name: Use Node.js
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: 12
+      # - run: npm install
+      #   working-directory: backend
+      # - name: Cypress run
+      #   uses: cypress-io/github-action@v1
+      #   with:
+      #     working-directory: frontend
+      #     config-file: cypress.json
+      #     start: npm run start:ci
+      #     wait-on: http://localhost:3000
+      #   env:
+      #     TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
+      #     JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      #     RECAPTCHA_SECRET_TEST: ${{ secrets.RECAPTCHA_SECRET_TEST }}
+      #     CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+      #     REACT_APP_RECAPTCHA_SITE_KEY_V2_TEST: ${{ secrets.REACT_APP_RECAPTCHA_SITE_KEY_V2_TEST }}
       - name: Deploy to dokku
         uses: idoberko2/dokku-deploy-github-action@v1
         with:
